--- a/EcommAppClient/package.json
+++ b/EcommAppClient/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@auth0/angular-jwt": "^5.0.1",
+    "alertifyjs": "^1.13.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
