--- a/EcommAppClient/package.json
+++ b/EcommAppClient/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.0.1",
     "alertifyjs": "^1.13.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
